# nono

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PR-978.md  README.md
.github/: pull_request_template.md
.github/workflows/: attest-release.yml  docs-dispatch.yml  image-build.yml  pr-summary.yml  release.yml  sign-instruction-files.yml
bindings/c/: Cargo.toml
bindings/c/src/: capability_set.rs  fs_capability.rs  lib.rs  query.rs  sandbox.rs  state.rs
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml
crates/nono-cli/data/: nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: app_runtime.rs  audit_attestation.rs  audit_commands.rs  audit_integrity.rs  audit_ledger.rs  audit_session.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_blocking_deprecation.rs  command_runtime.rs  credential_runtime.rs  exec_strategy.rs  execution_runtime.rs  hook_runtime.rs  instruction_deny.rs  jsonc.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  legacy_cleanup.rs  macos_trust.rs  main.rs  migration.rs  network_policy.rs  open_url_runtime.rs  output.rs  pack_update_hint.rs  package.rs  package_cmd.rs  package_status.rs  platform.rs  policy.rs  profile_cmd.rs  profile_runtime.rs  profile_save_runtime.rs  protected_paths.rs  proxy_runtime.rs  pty_proxy.rs  query_ext.rs  (+21 more)
crates/nono-cli/src/config/: mod.rs  user.rs  version.rs
crates/nono-cli/src/exec_strategy/: env_sanitization.rs  supervisor_linux.rs
crates/nono-cli/src/profile/: builtin.rs  mod.rs
crates/nono-cli/tests/: manifest_roundtrip.rs  profile_cli.rs  schema_shape.rs  url_open_integration.rs
crates/nono-proxy/: Cargo.toml
crates/nono-proxy/src/: audit.rs  config.rs  connect.rs  credential.rs  external.rs  forward.rs  lib.rs  reverse.rs  route.rs  server.rs  token.rs
crates/nono-proxy/src/tls_intercept/: acceptor.rs  bundle.rs  ca.rs  cert_cache.rs  handle.rs  mod.rs
crates/nono/src/: capability.rs  diagnostic.rs  keystore.rs  lib.rs  manifest.rs  scrub.rs  state.rs
crates/nono/src/sandbox/: linux.rs  macos.rs  mod.rs
crates/nono/src/supervisor/: mod.rs  socket.rs
crates/nono/src/trust/: dsse.rs  mod.rs  policy.rs  types.rs
crates/nono/src/undo/: exclusion.rs  snapshot.rs
crates/nono/tests/: manifest_types.rs
docs/: docs.json
docs/cli/clients/: claude-code.mdx  codex.mdx  openclaw.mdx  opencode.mdx  quickstart.mdx
docs/cli/features/: audit.mdx  credential-injection.mdx  environment.mdx  managing-packs.mdx  networking.mdx  package-publishing.mdx  profile-authoring.mdx  profile-introspection.mdx  profiles-groups.mdx
docs/cli/getting_started/: quickstart.mdx
docs/cli/internals/: containers.mdx  landlock.mdx  overview.mdx  security-model.mdx  wsl2-feature-matrix.mdx  wsl2.mdx
docs/cli/usage/: developer-workflows.mdx  examples.mdx  flags.mdx  troubleshooting.mdx
tests/integration/: test_tls_intercept.sh
