[package]
name = "nono-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C FFI bindings for nono capability-based sandboxing library"
publish = false

[lib]
name = "nono_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
nono = { version = "0.59.0", path = "../../crates/nono", default-features = false }

[build-dependencies]
cbindgen.workspace = true

[lints]
workspace = true
